FFM api example draft